force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/CM_QBR_Email_Draft_Buffer__c.object-meta.xml
<CustomObject>
    <label>QBR Email Draft Buffer</label>
    <nameField>
        <displayFormat>QEDB-{000000}</displayFormat>
        <label>Buffer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QBR Email Draft Buffers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>