force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>QBREmailDraftBuffers</relationshipName>
    <type>Lookup</type>
</CustomField>