force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/fields/AsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncJobId__c</fullName>
    <label>Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>