force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/fields/DraftBody__c.field-meta.xml
<CustomField>
    <fullName>DraftBody__c</fullName>
    <label>Draft Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>