force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/fields/DraftSubject__c.field-meta.xml
<CustomField>
    <fullName>DraftSubject__c</fullName>
    <label>Draft Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>