force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>