force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/fields/MeetingNotes__c.field-meta.xml
<CustomField>
    <fullName>MeetingNotes__c</fullName>
    <label>Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>