force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/fields/PromptResponse__c.field-meta.xml
<CustomField>
    <fullName>PromptResponse__c</fullName>
    <label>Prompt Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>