force-app/main/default/objects/CM_QBR_Email_Draft_Buffer__c/fields/SuggestedRecipients__c.field-meta.xml
<CustomField>
    <fullName>SuggestedRecipients__c</fullName>
    <label>Suggested Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>